--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.23.0",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
+    "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "^0.66.1",
