--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
-    "react-redux": "^7.2.5",
-    "redux": "^4.1.1"
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
