--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "^0.66.1",
+    "react-native-clear-app-cache": "^1.0.4",
     "react-native-form-validator": "^0.5.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-pager-view": "5.4.6",
