--- a/package.json
+++ b/package.json
@@ -35,7 +35,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "prettier": "2.4.1"
+    "@types/jest": "^27.0.2",
+    "@types/react": "^17.0.33",
+    "@types/react-native": "^0.66.1",
+    "@types/react-test-renderer": "^17.0.1",
+    "prettier": "2.4.1",
+    "typescript": "^4.4.4"
   },
   "private": true
 }
