--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.6",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.4.0"
+    "redux-thunk": "^2.4.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -39,6 +40,7 @@
     "@types/react": "^17.0.33",
     "@types/react-native": "^0.66.1",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.15",
     "prettier": "2.4.1",
     "typescript": "^4.4.4"
   },
