--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "@types/styled-components-react-native": "^5.1.2",
     "axios": "^0.23.0",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
