--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.1",
     "redux-thunk": "^2.4.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
