--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "^0.66.1",
+    "react-native": "0.64.2",
     "react-native-clear-app-cache": "^1.0.4",
     "react-native-form-validator": "^0.5.1",
     "react-native-gesture-handler": "~1.10.2",
@@ -39,12 +39,12 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/jest": "^27.0.2",
-    "@types/react": "^17.0.33",
-    "@types/react-native": "^0.66.1",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.15",
     "prettier": "2.4.1",
-    "typescript": "^4.4.4"
+    "typescript": "~4.3.5"
   },
   "private": true
 }
